# steam-switch

./: .gitignore  README.md  SteamSwitch-classic.bat  SteamSwitch-web.bat  SteamSwitch.bat  app.py  build.py  requirements.txt  server.py  webapp.py
assets/: make_icon.py
core/: __init__.py  accounts.py  games.py  launcher.py  offline_diff.py  steam_paths.py  switcher.py  vdf.py
design/: ORBIT-REDESIGN-PLAN.md  m1-accounts.html  m1-detail.html  m1-search.html  m1-settings.html  m1base.css  mock1.html  mock2.html  mock3.html  mock4.html
src/: CMakeLists.txt  README.md
src-tauri/: README.md
src-tauri/src/: main.rs
src/core/: appdata.cpp  appdata.h  autostart.cpp  autostart.h  covers.cpp  covers.h  epic_games.cpp  http.cpp  http.h  json.cpp  json.h  model.cpp  model.h  platform.h  platform_posix.cpp  platform_win.cpp  settings.cpp  settings.h  sha256.cpp  sha256.h  steam_accounts.cpp  steam_accounts.h  steam_games.cpp  steam_games.h  steam_launcher.cpp  steam_launcher.h  steam_paths.cpp  steam_paths.h  steam_switcher.cpp  steam_switcher.h  store_covers.cpp  store_covers.h  vdf.cpp  vdf.h  xbox_games.cpp  xbox_games.h
src/core/stores/: steam_store.cpp  store.h  xbox_store.cpp
src/tests/: test_accounts.cpp  test_autostart.cpp  test_covers.cpp  test_json.cpp  test_runner.cpp  test_settings.cpp  test_steam.cpp  test_store_covers.cpp  test_switcher.cpp  test_util.h  test_vdf.cpp  test_xbox.cpp
src/tools/: ssdiag.cpp
src/ui/: Backend.cpp  Backend.h  GameFilterModel.cpp  GameFilterModel.h  GameModel.cpp  GameModel.h  QtFetcher.cpp  QtFetcher.h  main.cpp
src/ui/i18n/: ar.qm  ar.ts
src/ui/qml/: AccountsView.qml  AmbientBackground.qml  AppState.qml  Chip.qml  DetailView.qml  FilterBar.qml  GameCard.qml  GameGrid.qml  GhostButton.qml  LibraryView.qml  Main.qml  ManagePanel.qml  OnboardingOverlay.qml  SearchPalette.qml  SettingsView.qml  Shelf.qml  SideNavItem.qml  StoreChip.qml  Theme.qml  Toggle.qml
tests/: smoke_test.py
ui_refresh/: PLAN.md
ui_refresh/proton_dark/: DESIGN.md
web/: app.js  bridge.js  index.html  style.css
